force-app/main/default/objects/ecrTree__c.object
<CustomObject>
    <description>Holds the JSON representation of Academic Program, built using ECR records.</description>
    <label>ecrTree</label>
    <nameField>
        <displayFormat>ECRT-{00000}</displayFormat>
        <label>rootNode ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ecrTree</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>