force-app/main/default/objects/ecrTree__c/fields/ecCount__c.field-meta.xml
<CustomField>
    <fullName>ecCount__c</fullName>
    <description>Total no of ECs in the tree</description>
    <inlineHelpText>Total no of ECs in the tree</inlineHelpText>
    <label>ecCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>