force-app/main/default/objects/ecrTree__c/fields/ecTreeHeight__c.field-meta.xml
<CustomField>
    <fullName>ecTreeHeight__c</fullName>
    <inlineHelpText>Height of the tree</inlineHelpText>
    <label>ecTreeHeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>