force-app/main/default/objects/ecrTree__c/fields/ecTypes__c.field-meta.xml
<CustomField>
    <fullName>ecTypes__c</fullName>
    <description>Types of ECs in the tree, ex: Stage, Process, Form, etc...</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Types of ECs in the tree, ex: Stage, Process, Form, etc...</inlineHelpText>
    <label>ecTypes</label>
    <type>TextArea</type>
</CustomField>