force-app/main/default/objects/ecrTree__c/fields/parentID__c.field-meta.xml
<CustomField>
    <fullName>parentID__c</fullName>
    <description>Holds the SFDC ID of the parent record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>parentID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>