force-app/main/default/objects/ecrTree__c/fields/payload__c.field-meta.xml
<CustomField>
    <fullName>payload__c</fullName>
    <description>Holds the JSON format of Academic Program Enrollment Component Tree</description>
    <encryptionScheme>None</encryptionScheme>
    <label>payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>