force-app/main/default/objects/ecrTree__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>Helps identify type of Parent, if its a SUBTREE OR a complete TREE
Ex: Stage, Process, Form etc....</description>
    <encryptionScheme>None</encryptionScheme>
    <label>type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>